--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="F:/Document/Frame/Spring/jar/Spring_Hibernate/spring-jdbc-4.2.4.RELEASE.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Spring_struts2"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Struts2"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Spring_junit"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
